# opn

./: .goreleaser.yml  Cargo.toml  LICENSE  README.md  go.mod  main.go
.github/workflows/: release.yml  test.yml
open/: open_darwin.go  open_linux.go  open_windows.go
src/: main.rs
