[package]
name = "opn"
version = "0.4.5"
edition = "2021"
license = "MIT"
description = "`opn` command to simulate the MacOS `open` command elsewhere."
homepage = "https://github.com/martinlindhe/opn"

[dependencies]

[profile.release]
# optimize for binary size
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
